--- a/multimedia/static/css/styles.css
+++ b/multimedia/static/css/styles.css
@@ -884,6 +884,32 @@ header {
   }
 }
 
+
+
+#multimedia{
+  display: flex;
+  justify-content: center;
+  & > div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: var(--ancho-contenedor);
+    padding: 26px;
+    gap: 25px;
+    & iframe{
+      width: 100%;
+      height: 350px ;
+    }
+    & video{
+      width: 100%;
+    }
+  }
+}
+
+
+
+
 /* ========================================
    FOOTER
    ======================================== */
