Enhance semantic structure and accessibility by adding roles to HTML elements and improving header layout

--- a/proyectoAAA/static/css/styles.css
+++ b/proyectoAAA/static/css/styles.css
@@ -766,8 +766,14 @@ header {
     & article {
       display: flex;
       flex-direction: column;
+      align-items: center; /* centrar contenidos verticalmente */
+      text-align: center;  /* centrar texto dentro de la tarjeta */
+      justify-content: center;
       font-family: var(--fuente-principal);
 
+      & img {
+        margin: 0 auto;
+      }
       & del {
         color: var(--color-secundario4);
       }
