--- a/proyectoUsabilidad/static/css/styles.css
+++ b/proyectoUsabilidad/static/css/styles.css
@@ -363,6 +363,8 @@ header {
   display: flex;
   flex-direction: column;
   position: relative;
+   aspect-ratio: 16 / 9;
+  min-height: 500px;
   align-items: center;
   justify-content: center;
   background-repeat: no-repeat;
