--- a/proyectoUsabilidad/static/css/styles.css
+++ b/proyectoUsabilidad/static/css/styles.css
@@ -23,6 +23,9 @@
   --padding-seccion-vertical: 50px;
   --padding-seccion-horizontal: 20px;
 }
+*{
+  font-display: swap;
+}
 
 /* ========================================
    AAA - Target size & Visual presentation
