Refactor code structure for improved readability and maintainability

--- a/proyectoUsabilidad/static/css/styles.css
+++ b/proyectoUsabilidad/static/css/styles.css
@@ -355,7 +355,7 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-image: url(../public/images/FondoSlider.webp);
+  background-image: url(../public/images/FondoSlider.avif);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
